--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $(function() {
             
 </script>
     </head>
-    <body>
+    <body bgcolor="red">
         <input id="keyword"/>
         <input id="idBox"/>
     </body>
